--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>          
       </section>
       <section class="online_control__section">
-        <h2 class="online_control__header">
+        <h2 class="types_of_repair__header white_font">
           ONLINE CONTROL
         </h2>
         <div class="secondary_section_logo">
@@ -154,28 +154,30 @@
               <label class="input_designator">
                 Name
               </label>
-              <input class="input_field" type="text" placeholder="What is your name:"/>          
+              <input class="input_field black_font" type="text" placeholder="What is your name:"/>          
             </div>
             <div class="broadcast_request__submit_section__data_input">
               <label class="input_designator">
                 Phone
               </label>
-              <input class="input_field" type="tel" placeholder="Your phone number:"/>   
+              <input class="input_field black_font" type="tel" placeholder="Your phone number:"/>   
             </div>
             <button class="submit_btn">
               SUBMIT
             </button>
           </div>
-          <div class="personal_data_processing_agreement">             
-            <input class="checkbox" type="checkbox">
-            <label class="checkbox_label">
-              I agree to the processing of personal data
-            </label>           
-          </div>
+          <div class="online_control__personal_data_processing_agreement">  
+            <div class="personal_data_processing_agreement">             
+              <input class="checkbox" type="checkbox">
+              <label class="checkbox_label black_font">
+                I agree to the processing of personal data
+              </label>           
+            </div>
+        </div>  
         </div>
       </section>
       <section class="types_of_repair__section">
-        <h2 class="types_of_repair__header">
+        <h2 class="types_of_repair__header black_font">
          TYPES OF REPAIR
         </h2>
         <div class="secondary_section__logo">
@@ -255,10 +257,7 @@
           </div>
         </div>
         <div class="measurer_request">
-          <div class="measurer_request__advantages">
-            <div class="measurer_request__advantages__background">
-              <img class="measurer_request__advantages__img" src="images/measurer_request_advantages_background.svg" alt="measurer_request__advantages__background">
-            </div>
+          <div class="measurer_request__advantages">            
             <ul class="measurer_request__advantages__list">
               <li class="measurer_request__advantages__item">
                 <div class="measurer_request__advantages__point">
@@ -268,9 +267,10 @@
                   </p>
                 </div>
                 <p class="measurer_request__advantages__text">
-                  Our specialist will arrive for measurements per day contact, or appoint a date convenient for you
+                  Our specialist will arrive for measurements per day <br>
+                  contact, or appoint a date convenient for you
                 </p>                
-              <li class="types_of_repair__item">
+              <li class="measurer_request__advantages__item">
                 <div class="measurer_request__advantages__point">
                   <img class="point__img" src="images/point.svg" alt="point">
                   <p class="point__value">
@@ -280,7 +280,7 @@
                   <p class="measurer_request__advantages__text">
                   Free metering
                 </p>
-              <li class="types_of_repair__item">
+              <li class="measurer_request__advantages__item">
                 <div class="measurer_request__advantages__point">
                   <img class="point__img" src="images/point.svg" alt="point">
                   <p class="point__value">
@@ -290,7 +290,7 @@
                 <p class="measurer_request__advantages__text">
                   Free consultation
                 </p>
-              <li class="types_of_repair__item">
+              <li class="measurer_request__advantages__item">
                 <div class="measurer_request__advantages__point">
                   <img class="point__img" src="images/point.svg" alt="point">
                   <p class="point__value">
@@ -298,57 +298,64 @@
                   </p>
                 </div>
                 <p class="measurer_request__advantages__text">
-                  Get a cost estimate and the timing of your future repairs 
+                  Get a cost estimate <br>
+                  and the timing of your future repairs 
                 </p> 
               </li>
             </ul>
+          </div>        
+          <div class="measurer_request__submit_section">
+            <h3 class="measurer_request__submit_section__description">
+              Leave a request for free <br>
+              departure of the measurer
+            </h3>
+            <div class="measurer_request__submit_section__data_input_section">
+              <div class="broadcast_request__submit_section__data_input">
+                <label class="input_designator">
+                  Name
+                </label>
+                <input class="input_field white_font" type="text" placeholder="What is your name:"/>          
+              </div>
+              <div class="broadcast_request__submit_section__data_input">
+                <label class="input_designator">
+                  Phone
+                </label>
+                <input class="input_field white_font" type="tel" placeholder="Your phone number:"/>   
+              </div>
+              <div class="broadcast_request__submit_section__data_input">
+                <label class="input_designator">
+                  Email
+                </label>
+                <input class="input_field white_font" type="tel" placeholder="Your email:"/>   
+              </div>
+            </div>
+            <div class="measurer__personal_data_processing_agreement">
+              <div class="personal_data_processing_agreement">
+                <input type="checkbox">
+                <label class="checkbox_label white_font">
+                  I agree to the processing of personal data
+                </label>
+              </div>
+            </div>  
+            <div class="call_the_measurer_btn__direction">
+              <button class="submit_btn">
+                CALL THE MEASURER
+              </button>
+            </div>  
+            <div class="discount">
+              <img class="discount__img" src="images/discount.svg" alt="discount">
+              <p class="discount_description">
+                Help save 10 - 20% of the <br>
+                cost of materials
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="measurer_request__submit_section">
-          <h3 class="measurer_request__submit_section__description">
-            Leave a request for free departure of the measurer
-          </h3>
-          <div class="measurer_request__submit_section__data_input">
-            <p class="input_designator">
-              Name
-            </p>
-            <br>
-            <input type="text" placeholder="What is your name:"/>          
-          </div>
-          <div class="measurer_request__submit_section__data_input">
-            <p class="input_designator">
-              Phone
-            </p>
-            <br>
-            <input type="tel" placeholder="Your phone number:"/>          
-          </div>
-          <div class="measurer_request__submit_section__data_input">
-            <p class="input_designator">
-              Email
-            </p>
-            <br>
-            <input type="email" placeholder="Your email:"/>          
-          </div>
-          <div class="personal_data_processing_agreement">
-            <input type="checkbox">
-            <label>
-              I agree to the processing of personal data
-            </label>
-          </div>
-          <button class="call_the_measurer__btn">
-            CALL THE MEASURER
-          </button>
-          <div class="discount">
-            <img class="discount__img" src="images/discount.svg" alt="discount">
-            <p class="discount_description">
-              Help save 10 - 20% of the cost of materials
-            </p>
-          </div>
-        </div>
+        </div>  
         <div class="wildest_fantasies">
           <div class="wildest_fantasies__text">
             <h2 class="main_block__header">
-            WE REALIZE YOUR WILDEST FANTASIES
+            WE REALIZE YOUR <br>
+            WILDEST FANTASIES
             </h2>
             <ul class="wildest_fantasies__list">
               <li class="wildest_fantasies__item">
@@ -376,16 +383,20 @@
               </li>
             </ul>
           </div>
-          <div class="wildest_fantasies__photos">
-            <img class="Fantasy_1" src="images/Fantasy_1.svg" alt="Fantasy_1">
-            <img class="Fantasy_2" src="images/Fantasy_2.svg" alt="Fantasy_2">
-            <img class="Fantasy_3" src="images/Fantasy_3.svg" alt="Fantasy_3">
-            <img class="Fantasy_4" src="images/Fantasy_4.svg" alt="Fantasy_4">
-          </div>
+          <div class="wildest_fantasies__photos__contsiner">
+            <div class="wildest_fantasies__photos column_left">
+              <img class="Fantasy_1" src="images/Fantasy_1.svg" alt="Fantasy_1">
+              <img class="Fantasy_2" src="images/Fantasy_2.svg" alt="Fantasy_2">
+            </div>  
+            <div class="wildest_fantasies__photos column_right">  
+              <img class="Fantasy_3" src="images/Fantasy_3.svg" alt="Fantasy_3">
+              <img class="Fantasy_4" src="images/Fantasy_4.svg" alt="Fantasy_4">
+            </div>
+          </div>  
         </div>
       </section>
       <section class="our_clients__section">
-        <h2 class="our_clients__header">
+        <h2 class="types_of_repair__header black_font">
           OUR CLIENTS
         </h2>
         <div class="secondary_section__logo">
@@ -422,6 +433,7 @@
                   40 M2
                 </p>
               </div>
+              <img class="client_data_separator" src="images/client_data_separator.svg">
               <div class="client__repair_data__small_block">
                 <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
                 <p class="client__repair_data__small_block__text">
@@ -454,6 +466,7 @@
                   90 M2
                 </p>
               </div>
+              <img class="client_data_separator" src="images/client_data_separator.svg">
               <div class="client__repair_data__small_block">
                 <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
                 <p class="client__repair_data__small_block__text">
@@ -486,6 +499,7 @@
                   56 M2
                 </p>
               </div>
+              <img class="client_data_separator" src="images/client_data_separator.svg">
               <div class="client__repair_data__small_block">
                 <img class="client__repair_data_img" src="images/calendar.svg" alt="calendar">
                 <p class="client__repair_data__small_block__text">
@@ -497,30 +511,30 @@
         </div>        
       </section>
       <section class="questions_section">
-        <h2 class="questions_section__header">
-          HAVE ANY QUESTION?
+        <h2 class="types_of_repair__header">
+          HAVE ANY QUESTIONS?
         </h2>
         <div class="questions__submit_section">
-          <div class="questions__submit_section__data_input">
-            <p class="input_designator">
+          <div class="broadcast_request__submit_section__data_input">
+            <label class="input_designator">
               Name
-            </p>
+            </label>
             <br>
-            <input type="text" placeholder="What is your name:"/>          
+            <input class="input_field white_font" type="text" placeholder="What is your name:"/>          
           </div>
-          <div class="questions__submit_section__data_input">
-            <p class="input_designator">
+          <div class="broadcast_request__submit_section__data_input">
+            <label class="input_designator">
               Phone
-            </p>
+            </label>
             <br>
-            <input type="tel" placeholder="Your phone number:"/>          
+            <input class="input_field white_font" type="tel" placeholder="Your phone number:"/>          
           </div>
-          <div class="questions__submit_section__data_input">
-            <p class="input_designator">
+          <div class="broadcast_request__submit_section__data_input white_font">
+            <label class="input_designator">
               Question
-            </p>
+            </label>
             <br>
-            <input type="text" placeholder="I want to know:"/>          
+            <input class="input_field white_font" type="text" placeholder="I want to know:"/>          
           </div>
           <div class="personal_data_processing_agreement">
             <input type="checkbox">
