Revert "prepared to JS"
This reverts commit 16c3aff8ac16fad6d67a89ec09a8343a8ca36bb7.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset=”utf-8”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="scripts.js"></script>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>IC Repair Design</title>
@@ -85,7 +84,7 @@
               <h3 class="secondary_block__header">
                 CITY
               </h3>
-              <p class="secondary_block__description city">
+              <p class="secondary_block__description">
                 Rostov-on-Don<br>
                 LCD admiral
               </p>
@@ -94,7 +93,7 @@
               <h3 class="secondary_block__header">
                 APARTMENT AREA
               </h3>
-              <p class="secondary_block__description area">
+              <p class="secondary_block__description">
                 81 m2
               </p>
             </div>
@@ -102,7 +101,7 @@
               <h3 class="secondary_block__header">
                 REPAIR TIME
               </h3>
-              <p class="secondary_block__description time">
+              <p class="secondary_block__description">
                 3.5 months
               </p>
             </div>
@@ -110,38 +109,30 @@
               <h3 class="secondary_block__header">
                 REPAIR COST
               </h3>
-              <p class="secondary_block__description price">
+              <p class="secondary_block__description">
                 Upon request
               </p>
             </div>
           </div> 
           <div class="completed_projects__slider">
-            <img class="slider_arrow prew" src="images/slider_arrow_left.svg" alt="arrow_left">
-              <div class="slider_dots">
-                <div class="slider_dots_item num0" data-index=" 0"></div>
-                <div class="slider_dots_item num1" data-index=" 1"></div>
-                <div class="slider_dots_item num2" data-index=" 2"></div>
-              </div>
-            <img class="slider_arrow next" src="images/slider_arrow_right.svg" alt="arrow_right">
+            <img src="images/slider_arrows.svg" alt="slider_arrows">
           </div>
         </div>
         <div class="completed_projects__image_block">  
           <div class="completed_projects__nav">
             <ul class="completed_projects__nav__list">
-              <li class="completed_projects__city num0 active">ROSTOV-ON-DON ADMIRAL</li>
-              <li class="completed_projects__city num1">SOCHI THIEVES</li>
-              <li class="completed_projects__city num2">ROSTOV-ON-DON PATRIOT</li>
+              <li class="completed_projects__nav__item">
+                <a class="completed_projects__link" href="#">ROSTOV-ON-DON ADMIRAL</a>
+              <li class="completed_projects__item">
+                <a class="completed_projects__link" href="#">SOCHI THIEVES</a>
+              <li class="completed_projects__item">
+                <a class="completed_projects__link" href="#">ROSTOV-ON-DON PATRIOT</a>
+              </li>
             </ul>
           </div>
-          <div class="completed_projects__img num0 active" data-index="0">
-            <img src="images/admiral_interior.png" alt="admiral_interior">
+          <div class="completed_projects__img">
+            <img src="images/interior.svg" alt="interior">
           </div>
-          <!-- <div class="completed_projects__img num1" data-index="1"> -->
-            <!-- <img src="images/sochi_thieves_interior.png" alt="sochi_thieves_interior">
-          </div>
-          <div class="completed_projects__img num2" data-index="2">
-            <img src="images/patriotic_interior.png" alt="patriotic_interior">
-          </div> -->
         </div>          
       </section>
       <section class="online_control__section">     
